Remove reactive API from repository and operation, #241.
Signed-off-by: Pan Li <panli@microsoft.com>